--- a/PhungDucTiepWPF/Views/CustomerWindow.xaml
+++ b/PhungDucTiepWPF/Views/CustomerWindow.xaml
@@ -13,9 +13,8 @@
 
         <StackPanel Orientation="Vertical" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Width="200" >
             <Button Content="Edit Profile" Margin="0,5" Command="{Binding EditProfileCommand}"/>
-            <Button Content="View Orders" Margin="0,5" Click="ViewOrders_Click"/>
-            <Button Content="Manage Orders" Margin="0,5" Click="ManageRooms_Click"/>
-            <Button Content="Logout" Margin="0,20,0,0" Click="Logout_Click"/>
+            <Button Content="View Orders" Margin="0,5" Command="{Binding ViewOrdersCommand}"/>
+            <Button Content="Logout" Margin="0,20,0,0" Command="{Binding LogoutCommand}"/>
         </StackPanel>
     </Grid>
 </Window>
